--- a/src/app/dashboard/components/carreras/descripcion-carrera/descripcion-edit/descripcion-edit.component.html
+++ b/src/app/dashboard/components/carreras/descripcion-carrera/descripcion-edit/descripcion-edit.component.html
@@ -15,12 +15,13 @@
                 (onInit)="handleEditorInit($event)"
                 [init]="{
                     icons: 'material',
-                    skin: 'borderless',
-                    plugins: ['wordcount', 'lists', 'image imagetools', 'media'],
-                    menubar: false,
+                    skin: 'oxide',
+                    plugins: ['print', 'preview', 'textcolor', 'wordcount', 'lists', 'image imagetools', 
+                            'media', 'table', 'code', 'link'],
+                    menubar: ['file', 'edit', 'view', 'insert', 'format','table'],
                     min_height: 350,
                     width : '750',
-                    toolbar: 'undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | outdent indent | numlist bullist | image | media',
+                    toolbar: 'forecolor backcolor | undo redo | styleselect | link | bold italic | alignleft aligncenter alignright alignjustify | outdent indent | numlist bullist | image | media | table tabledelete | tableprops tablerowprops tablecellprops | tableinsertrowbefore tableinsertrowafter tabledeleterow | tableinsertcolbefore tableinsertcolafter tabledeletecol | code',
                     media_live_embeds: true
                 }"
             ></editor>
