--- a/src/app/dashboard/components/certificates/adm-design-certificate/adm-design-certificate.component.html
+++ b/src/app/dashboard/components/certificates/adm-design-certificate/adm-design-certificate.component.html
@@ -23,11 +23,11 @@
                 icons: 'material',
                 skin: 'oxide',
                 plugins: ['print', 'preview', 'textcolor', 'wordcount', 'lists', 'image imagetools', 
-                        'media', 'table', 'code'],
+                        'media', 'table', 'code', 'link'],
                 menubar: ['file', 'edit', 'view', 'insert', 'format','table'],
                 min_height: 1024,
                 width : '1024',
-                toolbar: 'forecolor backcolor | undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | outdent indent | numlist bullist | image | media | table tabledelete | tableprops tablerowprops tablecellprops | tableinsertrowbefore tableinsertrowafter tabledeleterow | tableinsertcolbefore tableinsertcolafter tabledeletecol | code',
+                toolbar: 'forecolor backcolor | undo redo | styleselect | link | bold italic | alignleft aligncenter alignright alignjustify | outdent indent | numlist bullist | image | media | table tabledelete | tableprops tablerowprops tablecellprops | tableinsertrowbefore tableinsertrowafter tabledeleterow | tableinsertcolbefore tableinsertcolafter tabledeletecol | code',
                 media_live_embeds: true
             }"
             ></editor>
