--- a/src/app/dashboard/components/video-conference/video-conference-create/video-conference-create.component.html
+++ b/src/app/dashboard/components/video-conference/video-conference-create/video-conference-create.component.html
@@ -42,12 +42,13 @@
                     (onInit)="handleEditorInit($event)"
                     [init]="{
                         icons: 'material',
-                        skin: 'borderless',
-                        plugins: ['wordcount', 'lists'],
-                        menubar: false,
+                        skin: 'oxide',
+                        plugins: ['print', 'preview', 'textcolor', 'wordcount', 'lists', 'image imagetools', 
+                                'media', 'table', 'code', 'link'],
+                        menubar: ['file', 'edit', 'view', 'insert', 'format','table'],
                         min_height: 200,
                         width : 500,
-                        toolbar: 'undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | outdent indent | numlist bullist',
+                        toolbar: 'forecolor backcolor | undo redo | styleselect | link | bold italic | alignleft aligncenter alignright alignjustify | outdent indent | numlist bullist | image | media | table tabledelete | tableprops tablerowprops tablecellprops | tableinsertrowbefore tableinsertrowafter tabledeleterow | tableinsertcolbefore tableinsertcolafter tabledeletecol | code',
                         media_live_embeds: true
                     }"
                     ></editor>
