corregido duracion de cursos y carreras en pagos payu

--- a/src/app/dashboard/components/payu/checkout/checkout.component.html
+++ b/src/app/dashboard/components/payu/checkout/checkout.component.html
@@ -11,7 +11,10 @@
         </div>
         <div class="course-detail">
             <div class="course-name">
-                <p>Curso o carrera: <span>{{ courseToBuy.nombre }}</span></p>
+                <p style="margin-left: 0.5rem;">Curso o carrera:</p>
+                <p><span>{{ courseToBuy.nombre }}</span></p>
+                <p style="margin-left: 0.5rem;">Duración:</p>
+                <p><span>3 meses*</span></p>
             </div>
             <div class="course-total">
                 <p>Subtotal: </p>
@@ -69,6 +72,7 @@
             <p>Al dar click en pagar, será redirigido a la plataforma de pagos Payu, podra realizar el pago con tarjetas de crédito, transferencias bancarias, efectivo y más.</p>
             <p>Si estas fuera de Colombia el pago debera ser realizado con tarjeta de credito.</p>
             <p>Al confirmar el pago será inscrito al curso o carrera elegido y podrá iniciar la formación.</p>
+            <p style="margin-top: 0.7rem;">* El acceso al contenido del curso o carrera será por 3 meses, si logra la certificación tendra acceso a ella hasta el vencimiento de la misma.</p>
         </div>
     </div>
 </main>
