Bloquear certificados en cursos

--- a/src/app/dashboard/components/cursos/add-student/add-student.component.scss
+++ b/src/app/dashboard/components/cursos/add-student/add-student.component.scss
@@ -136,3 +136,11 @@ td.mat-cell:last-of-type {
 .botonMatricular-texto {
     margin-left: 0.5rem;
 }
+
+.allow-cert {
+    background: red;
+}
+
+.no-cert {
+    background: var(--main-color2);
+}
