--- a/src/app/dashboard/components/payu/cupons/cupons.component.html
+++ b/src/app/dashboard/components/payu/cupons/cupons.component.html
@@ -66,6 +66,40 @@
                 {{ element.fecha }}
             </td>
         </ng-container>
+        <!-- tipo -->
+        <ng-container matColumnDef="tipo">
+            <th
+            mat-header-cell
+            *matHeaderCellDef
+            mat-sort-header
+            id="tipo">
+                Tipo
+            </th>
+            <td
+                mat-cell
+                *matCellDef="let element"
+                matTooltip="Tipo de programa"
+                class="tipo">
+                {{ element.tipo }}
+            </td>
+        </ng-container>
+        <!-- nombre curso -->
+        <ng-container matColumnDef="curso">
+            <th
+            mat-header-cell
+            *matHeaderCellDef
+            mat-sort-header
+            id="curso">
+                Curso / Carrera
+            </th>
+            <td
+                mat-cell
+                *matCellDef="let element"
+                matTooltip="Nombre del curso o carrera"
+                class="curso">
+                {{ element.nombreCurso }}
+            </td>
+        </ng-container>
 
         <!-- botones de acción -->
         <ng-container matColumnDef="actions">
