--- a/src/app/dashboard/components/payu/cupons/cupons.component.html
+++ b/src/app/dashboard/components/payu/cupons/cupons.component.html
@@ -33,12 +33,12 @@
             </td>
         </ng-container>
         <!-- descuento -->
-        <ng-container matColumnDef="descuento">
+        <ng-container matColumnDef="porcentaje">
             <th
             mat-header-cell
             *matHeaderCellDef
             mat-sort-header
-            id="descuento">
+            id="porcentaje">
                 Descuento %
             </th>
             <td
@@ -84,7 +84,7 @@
             </td>
         </ng-container>
         <!-- nombre curso -->
-        <ng-container matColumnDef="curso">
+        <ng-container matColumnDef="nombreCurso">
             <th
             mat-header-cell
             *matHeaderCellDef
