--- a/src/app/dashboard/components/cursos/create/create.component.html
+++ b/src/app/dashboard/components/cursos/create/create.component.html
@@ -147,16 +147,18 @@
                   <ng-container *ngIf="plantillaField.hasError('required')">Este campo es requerido</ng-container>
               </mat-error>
           </mat-select>
-      </mat-form-field>
+        </mat-form-field>
+        <!-- Visible? -->
+        <mat-checkbox class="example-margin" formControlName="visible" tabIndex=11 [(ngModel)]="visible">Visible en lista de cursos?</mat-checkbox>
         <!-- Vencimiento certificado -->
-        <mat-checkbox class="example-margin" formControlName="vence" tabIndex=11 [(ngModel)]="vence">Certificado vence?</mat-checkbox>
+        <mat-checkbox class="example-margin" formControlName="vence" tabIndex=12 [(ngModel)]="vence">Certificado vence?</mat-checkbox>
         <mat-form-field *ngIf="vence">
           <mat-label>Vencimiento certificado (años)</mat-label>
           <input
             type="number"
             matInput
             formControlName="vencimiento"
-            tabIndex=12/>
+            tabIndex=13/>
           <mat-error *ngIf="vencimientoField.touched && vencimientoField.invalid">
             <ng-container *ngIf="vencimientoField.hasError('required')">Este campo es requerido</ng-container>
           </mat-error>
@@ -165,10 +167,10 @@
       <div class="buttons">
         <button
           type="submit"
-          tabIndex=13
+          tabIndex=14
           mat-raised-button
           [disabled]="form.invalid">{{ id ? 'Guardar cambios' : 'Guardar'}}</button>
-				<a mat-raised-button (click)="cancel()" tabIndex=14>Cancelar</a>
+				<a mat-raised-button (click)="cancel()" tabIndex=15>Cancelar</a>
       </div>
     </form>
   </main>
