--- a/src/app/dashboard/components/exercises/exercises-list/exercises-list.component.scss
+++ b/src/app/dashboard/components/exercises/exercises-list/exercises-list.component.scss
@@ -12,7 +12,7 @@
     margin-bottom: 24px;
 }
 
-table {
+table, section {
     width: 95%;
     margin: 0 auto;
     text-align: left;
@@ -59,5 +59,14 @@ td.mat-cell:last-of-type {
 .buttons .mat-stroked-button {
   margin-left: 5px;
   min-width: 40px;
+}
+
+.question-opt {
+  display: flex;
+  flex-direction: column;
+
+    .mat-radio-button {
+      margin: 8px;
+    }
 }
 
