--- a/src/app/dashboard/components/exercises/exercises-rev-detail/exercises-rev-detail/exercises-rev-detail.component.scss
+++ b/src/app/dashboard/components/exercises/exercises-rev-detail/exercises-rev-detail/exercises-rev-detail.component.scss
@@ -196,5 +196,12 @@ main {
     margin: 16px 0;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    column-gap: 16px;
+    column-gap: 1rem;
+    row-gap: 1rem;
+
+    .mailCheck {
+        grid-column-start: span 2;
+        display: flex;
+        justify-content: center;
+    }
 }
